RESOLVED FIXED160589
[Cocoa] WKRemoteObjectCoder doesn’t handle NSRange
https://bugs.webkit.org/show_bug.cgi?id=160589
Summary [Cocoa] WKRemoteObjectCoder doesn’t handle NSRange
mitz
Reported 2016-08-04 22:45:36 PDT
Patch forthcoming.
Attachments
Add NSRange coding (2.14 KB, patch)
2016-08-04 22:49 PDT, mitz
no flags
Add NSRange coding (6.43 KB, patch)
2016-08-05 12:51 PDT, mitz
thorton: review+
mitz
Comment 1 2016-08-04 22:49:26 PDT
Created attachment 285400 [details] Add NSRange coding
mitz
Comment 2 2016-08-05 12:51:55 PDT
Created attachment 285441 [details] Add NSRange coding Added test and fixed existing test
WebKit Commit Bot
Comment 3 2016-08-05 12:54:14 PDT
Attachment 285441 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:79: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 4 2016-08-05 13:21:30 PDT
Note You need to log in before you can comment on or make changes to this bug.