Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm
@@ -76,6 +76,11 @@
     completionHandler(result);
 }
 
+- (void)takeRange:(NSRange)range completionHandler:(void (^)(NSUInteger location, NSUInteger length))completionHandler
+{
+    completionHandler(range.location, range.length);
+}
+
 @end
 
 #endif // WK_API_ENABLED
